--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
-  "name": "i18next-localforage-backend",
+  "name": "@davidegheri/i18next-localforage-backend",
   "version": "1.0.0",
+  "description": "caching layer backend for i18next using localforage as storage layer",
   "main": "index.js",
   "module": "./dist/esm/i18nextLocalStorageBackend.js",
   "types": "./dist/index.d.ts",
+  "keywords": [
+    "i18next",
+    "i18next-backend"
+  ],
+  "homepage": "https://github.com/Davide-Gheri/i18next-localforage-backend",
+  "bugs": "https://github.com/Davide-Gheri/i18next-localforage-backend/issues",
+  "author": "Davide Gheri <davide@davidegheri.com>",
   "license": "MIT",
   "scripts": {
     "lint": "eslint ./src/*",
